# QuickOK-CharTextureAltas

./: .gitignore  CMakeLists.txt  README.md  build.ninja  uncrustify.cfg
include/: char_texture_altas.h.uncrustify  rectpack.h
source/: maxrect.c  maxrect.h  sort.c
